# agentic-sop-oilfield-services

./: .env.example  .env.skin  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  SPECS.md  cloudbuild.yaml  conftest.py  pyproject.toml
agents/: schemas.py
agents/capacity_planning_agent/: agent.py  config.py  deploy.py  prompts.py  tools.py
agents/forecast_review_agent/: agent.py  config.py  deploy.py  tools.py
agents/orchestrator_agent/: agent.py  auth.py  deploy.py  prompts.py  tools.py
agents/procurement_approval_agent/: agent.py  agent_card.py  agent_executor.py  config.py  deploy.py  local_server.py  prompts.py  test_client.py  tools.py
agents/tests/: conftest.py  test_skill_compliance.py
agents/utils/: __init__.py  a2ui.py  adk_compat.py  bq_query.py  corpus_manifests.py  deploy.py  enterprise_data.py  eval_helpers.py  global_gemini.py  mcp_client.py  mcp_toolsets.py  prompt_builder.py  skill_imports.py  skill_tools.py  skin_loader.py  skin_schema.py  vertex_ai_search.py
canvas/: .dockerignore  Dockerfile  cloudbuild.yaml  next.config.ts  package-lock.json  package.json
canvas/public/: skin.json
data/: canonical_assets.json  cross_system_aliases.json  customers.json  fdp_configurations.json  functional_equivalences.json  intouch_index.json  maximo_inventory.json  sap_workforce.json
data/anchors/: bls_qcew_workforce.json  bsee_corpus.json  bsee_workorders.json  intouch_corpus.json  sec_edgar_corpus.json  sec_edgar_customers.json  uspto_patents.json
data/start_date_variance/: permian.json  west_africa.json
docs/: architecture.md  canvas_data_contracts.md  code-review-2026-05-21.md  data_layer.md  demo-handbook.md  demo_guide.md  demo_storyboard.md  demo_walkthrough.md  evals.md  governance.md  persona-live-mode-status.md  testing_guide.md  vertex_ai_search_setup.md
docs/adr/: 0001-adopt-adk-2-workflow.md  0002-poetry-not-uv.md  0003-plan-evaluator-bundled.md  (+4 more)
infra/: gateway_policies.yaml  governance_runbook.sh  model_armor.yaml
knowledge_catalog/: README.md  setup.py
mcp_servers/: README.md  entrypoint.sh  local_run.sh
memory_bank/: seed_demo_sessions.py  seed_memories.py  topics.md
scripts/: build_bls_qcew_anchors.py  build_bsee_anchors.py  build_bsee_corpus.py  build_intouch_corpus.py  build_sec_edgar_anchors.py  build_sec_edgar_corpus.py  build_uspto_anchors.py  compile_skin.py  configure_agent_identity.py  demo_preflight.py  demo_runner.sh  load_bakerhughes.py  load_eia.py  load_worldport_index.py  local_run_orchestrator.py  procurement_local_server.py  procurement_test_client.py  register_mcp_servers.py  seed_blocked_attack_example.py  seed_bq_from_json.py  setup_vertex_ai_search.py  smoke_cargo_plane.py  verify_no_json_reads.py
skins/: README.md  TODO_STEP_5.md
src/: schemas.py
tasks/: TASK-01-environment-and-fork.md  TASK-02-agent-skeletons.md  TASK-03-skills.md  TASK-04-adk2-workflow-refactor.md  TASK-05-mcp-servers.md  TASK-06-knowledge-catalog.md  TASK-07-memory-bank.md  TASK-08-canvas-global-asset-view.md  TASK-09-canvas-fleet-utilization-view.md  TASK-10-websocket-integration.md  TASK-11-governance.md  TASK-12-demo-runner.md  TASK-13-customer-skin.md  TASK-14-deployment.md  TASK-15-polish.md  TASK-16-backend-migration.md  TASK-17-unstructured-corpus.md  TASK-18-persona4-deep-research.md  TASK-19-persona5-agent-studio.md  TASK-20-persona6-audit-walkthrough.md
(+267 files in other folders)
