[tool.poetry]
name = "agentic-sop-oilfield-services"
version = "0.1.0"
description = "Agentic S&OP demo for oilfield services on Gemini Enterprise + Gemini Enterprise Agent Platform"
authors = ["Rahul Kasanagottu"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = { extras = ["agent_engines", "adk", "evaluation"], version = ">=1.121.0,<2.0.0" }
google-adk = ">=1.25.0,<2.0.0"
google-genai = ">=1.5.0"
# a2a-sdk 1.0.x removed ClientEvent which google-adk still imports — pin <1.0. See CLAUDE.md.
a2a-sdk = ">=0.3.9,<1.0"
pydantic = ">=2.12.0"
fastapi = ">=0.110.0"
uvicorn = ">=0.30.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
google-auth = ">=2.0.0"
pandas = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.3.0"
mypy = ">=1.8"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "PL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
