[tool.poetry]
name = "agentic-sop-oilfield-services"
version = "0.1.0"
description = "Agentic S&OP demo for oilfield services on Gemini Enterprise + Gemini Enterprise Agent Platform"
authors = ["Rahul Kasanagottu"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "agents"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = { extras = ["agent_engines", "evaluation"], version = ">=1.121.0,<2.0.0" }
google-adk = ">=2.0.0b1,<2.1"
google-genai = ">=1.5.0"
# a2a-sdk 1.0.x removed ClientEvent which google-adk still imports — pin <1.0. See CLAUDE.md.
a2a-sdk = ">=0.3.9,<1.0"
pydantic = ">=2.12.0"
fastapi = ">=0.110.0"
uvicorn = ">=0.30.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
google-auth = ">=2.0.0"
pandas = ">=2.0.0"
# Knowledge Catalog (TASK-06). 2.0+ exposes CatalogServiceClient with
# Aspect Types / Entry Types / Entries APIs. Used by knowledge_catalog/setup.py.
google-cloud-dataplex = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.1"
ruff = ">=0.3.0"
mypy = ">=1.8"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "PL"]
# PLC0415: Reference patterns (planner agent_executor, deploy scripts) deliberately
#   lazy-import heavy deps inside functions to keep module-load time fast.
# PLR2004: Magic-value rule is noisy in tests + config code; we accept it for
#   numeric thresholds (e.g. weight-sum tolerance 1e-4).
ignore = ["PLC0415", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# Builder/loader scripts in scripts/ contain long realistic data strings
# (real patent titles, SEC contract titles, BSEE incident descriptions)
# and large main() ingestion functions. E501 line-length + PLR0915/0913
# complexity rules don't add value there.
"scripts/*.py" = ["E501", "PLR0913", "PLR0915"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agents/tests"]
